fix: adjust padding for improved text alignment in headings

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -327,7 +327,7 @@ h1, h2, h3, h4, h5, h6, p {
     align-items: center;
     text-align: center;
     line-height: 1.5;
-    padding: 0 0 20px 0;
+    padding: 0 20px 20px 20px;
     margin: 0 auto;
 }
 
